# mastodon_digest

./: .env.example  Dockerfile  Makefile  README.md  api.py  demo_data.py  formatters.py  index.html  models.py  pyproject.toml  requirements.txt  run.py  scorers.py  style.css  style.js  thresholds.py
.github/workflows/: update.yml
render/: style.css  style.js
templates/: digest.html.jinja  posts.html.jinja
